arquitectura-test/endpoints.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Endpoints
  metadata:
    creationTimestamp: "2023-06-14T14:20:32Z"
    labels:
      app: trackdt
    name: trackdt
    namespace: arquitectura-test
    resourceVersion: "472917984"
    uid: d49b152e-3527-4173-9cdc-56a1e1dea0d1
  subsets:
  - addresses:
    - ip: 10.129.16.154
      nodeName: ocp4azu-sj2sl-worker-noprod-qa-brazilsouth1-2s77x
      targetRef:
        kind: Pod
        name: trackdt-8-959pm
        namespace: arquitectura-test
        resourceVersion: "472917982"
        uid: 2e7b18f2-c6df-4dc5-8677-40902684b834
    ports:
    - name: 8080-tcp
      port: 3000
      protocol: TCP
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
