arquitectura-test/endpointslices.discovery.k8s.io.yaml
apiVersion: v1
items:
- addressType: IPv4
  apiVersion: discovery.k8s.io/v1
  endpoints:
  - addresses:
    - 10.129.16.154
    conditions:
      ready: true
      serving: true
      terminating: false
    nodeName: ocp4azu-sj2sl-worker-noprod-qa-brazilsouth1-2s77x
    targetRef:
      kind: Pod
      name: trackdt-8-959pm
      namespace: arquitectura-test
      resourceVersion: "472917982"
      uid: 2e7b18f2-c6df-4dc5-8677-40902684b834
    zone: brazilsouth-1
  kind: EndpointSlice
  metadata:
    creationTimestamp: "2023-06-14T14:20:32Z"
    generateName: trackdt-
    generation: 144
    labels:
      app: trackdt
      endpointslice.kubernetes.io/managed-by: endpointslice-controller.k8s.io
      kubernetes.io/service-name: trackdt
    name: trackdt-ndm8x
    namespace: arquitectura-test
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: Service
      name: trackdt
      uid: 4425abae-b3ae-4d48-8371-dc1b232fa93a
    resourceVersion: "472917985"
    uid: 1103fc32-0e74-4667-a6fe-76e557b500e7
  ports:
  - name: 8080-tcp
    port: 3000
    protocol: TCP
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
