arquitectura-test/pods.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Pod
  metadata:
    annotations:
      k8s.v1.cni.cncf.io/network-status: |-
        [{
            "name": "openshift-sdn",
            "interface": "eth0",
            "ips": [
                "10.129.16.154"
            ],
            "default": true,
            "dns": {}
        }]
      k8s.v1.cni.cncf.io/networks-status: |-
        [{
            "name": "openshift-sdn",
            "interface": "eth0",
            "ips": [
                "10.129.16.154"
            ],
            "default": true,
            "dns": {}
        }]
      openshift.io/deployment-config.latest-version: "8"
      openshift.io/deployment-config.name: trackdt
      openshift.io/deployment.name: trackdt-8
      openshift.io/generated-by: OpenShiftNewApp
      openshift.io/scc: restricted
    creationTimestamp: "2023-09-05T14:37:36Z"
    generateName: trackdt-8-
    labels:
      app: trackdt
      deployment: trackdt-8
      deploymentconfig: trackdt
    name: trackdt-8-959pm
    namespace: arquitectura-test
    ownerReferences:
    - apiVersion: v1
      blockOwnerDeletion: true
      controller: true
      kind: ReplicationController
      name: trackdt-8
      uid: 469981e8-0327-4d8a-a5b8-be298e673ec3
    resourceVersion: "472917982"
    uid: 2e7b18f2-c6df-4dc5-8677-40902684b834
  spec:
    containers:
    - command:
      - npm
      - run
      - dev
      image: image-registry.openshift-image-registry.svc:5000/arquitectura-test/trackdt@sha256:ce8cb59d4c8ebf2a44ec66183f8f641b7f5bd0d3cd6d0d99a9f773c5a3574c9b
      imagePullPolicy: Always
      name: trackdt
      ports:
      - containerPort: 8080
        protocol: TCP
      resources:
        limits:
          cpu: 50m
          memory: 200Mi
        requests:
          cpu: 25m
          memory: 80Mi
      securityContext:
        capabilities:
          drop:
          - KILL
          - MKNOD
          - SETGID
          - SETUID
        runAsUser: 1000690000
      terminationMessagePath: /dev/termination-log
      terminationMessagePolicy: File
      volumeMounts:
      - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
        name: kube-api-access-z67pw
        readOnly: true
    dnsPolicy: ClusterFirst
    enableServiceLinks: true
    imagePullSecrets:
    - name: default-dockercfg-hc45w
    nodeName: ocp4azu-sj2sl-worker-noprod-qa-brazilsouth1-2s77x
    preemptionPolicy: PreemptLowerPriority
    priority: 0
    restartPolicy: Always
    schedulerName: default-scheduler
    securityContext:
      fsGroup: 1000690000
      seLinuxOptions:
        level: s0:c26,c20
    serviceAccount: default
    serviceAccountName: default
    terminationGracePeriodSeconds: 30
    tolerations:
    - effect: NoExecute
      key: node.kubernetes.io/not-ready
      operator: Exists
      tolerationSeconds: 300
    - effect: NoExecute
      key: node.kubernetes.io/unreachable
      operator: Exists
      tolerationSeconds: 300
    - effect: NoSchedule
      key: node.kubernetes.io/memory-pressure
      operator: Exists
    volumes:
    - name: kube-api-access-z67pw
      projected:
        defaultMode: 420
        sources:
        - serviceAccountToken:
            expirationSeconds: 3607
            path: token
        - configMap:
            items:
            - key: ca.crt
              path: ca.crt
            name: kube-root-ca.crt
        - downwardAPI:
            items:
            - fieldRef:
                apiVersion: v1
                fieldPath: metadata.namespace
              path: namespace
        - configMap:
            items:
            - key: service-ca.crt
              path: service-ca.crt
            name: openshift-service-ca.crt
  status:
    conditions:
    - lastProbeTime: null
      lastTransitionTime: "2023-09-05T14:37:36Z"
      status: "True"
      type: Initialized
    - lastProbeTime: null
      lastTransitionTime: "2023-09-05T14:37:50Z"
      status: "True"
      type: Ready
    - lastProbeTime: null
      lastTransitionTime: "2023-09-05T14:37:50Z"
      status: "True"
      type: ContainersReady
    - lastProbeTime: null
      lastTransitionTime: "2023-09-05T14:37:36Z"
      status: "True"
      type: PodScheduled
    containerStatuses:
    - containerID: cri-o://830bd381ae9654f9005c6985abb7952cf8c40521e551aa44877b5430daca4223
      image: image-registry.openshift-image-registry.svc:5000/arquitectura-test/trackdt@sha256:ce8cb59d4c8ebf2a44ec66183f8f641b7f5bd0d3cd6d0d99a9f773c5a3574c9b
      imageID: image-registry.openshift-image-registry.svc:5000/arquitectura-test/trackdt@sha256:ce8cb59d4c8ebf2a44ec66183f8f641b7f5bd0d3cd6d0d99a9f773c5a3574c9b
      lastState: {}
      name: trackdt
      ready: true
      restartCount: 0
      started: true
      state:
        running:
          startedAt: "2023-09-05T14:37:49Z"
    hostIP: 10.80.80.28
    phase: Running
    podIP: 10.129.16.154
    podIPs:
    - ip: 10.129.16.154
    qosClass: Burstable
    startTime: "2023-09-05T14:37:36Z"
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
