arquitectura-test/services.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: "2023-06-14T14:20:32Z"
    labels:
      app: trackdt
    name: trackdt
    namespace: arquitectura-test
    resourceVersion: "28571704"
    uid: 4425abae-b3ae-4d48-8371-dc1b232fa93a
  spec:
    clusterIP: 172.30.26.245
    clusterIPs:
    - 172.30.26.245
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 3000
    selector:
      app: trackdt
      deploymentconfig: trackdt
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
